updates vscode and stuff

--- a/starship/config.toml
+++ b/starship/config.toml
@@ -9,6 +9,9 @@ disabled = true
 [python]
 disabled = true
 
+[conda]
+format = ""
+
 [git_status]
 format = "[$ahead_behind$untracked$modified]($style)"
 
