--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -72,30 +72,28 @@
 		"format": true,
 		"autoComplete": true
 	},
-	"window.newWindowDimensions": "normal",
+	"window.newWindowDimensions": "maximized",
 	"go.buildFlags": [
 		"-v"
 	],
+	"editor.fontFamily": "'JetBrains Mono', Hack, Menlo, Monaco, 'Courier New', monospace",
 	"editor.smoothScrolling": true,
 	"files.exclude": {
 		"yarn.lock": true
 	},
 	"git.autofetch": true,
 	"explorer.confirmDelete": false,
-	"editor.fontSize": 14,
+	"editor.fontSize": 15,
+	"workbench.iconTheme": "vscode-icons",
 	"python.formatting.autopep8Args": [
 		"--aggressive ",
 		"--aggressive"
 	],
-	"workbench.iconTheme": "vscode-icons",
 	"workbench.editorAssociations": [
 		{
 			"viewType": "jupyter.notebook.ipynb",
 			"filenamePattern": "*.ipynb"
 		}
-	],
-	"html.format.indentInnerHtml": true,
-	"python.formatting.provider": "black",
-	"editor.comments.insertSpace": true,
-	"editor.detectIndentation": false
+	]
+
 }
