--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -96,6 +96,9 @@
         }
     ],
     "editor.detectIndentation": false,
-    "workbench.tree.renderIndentGuides": "none"
+    "workbench.tree.renderIndentGuides": "none",
+    "[javascript]": {
+        "editor.defaultFormatter": "HookyQR.beautify"
+    }
 
 }
